analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/valPropertyWithSetter2.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE_K1
val i: Int = 0
<caret>set
